# discord-bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  main.rs  settings.rs
src/commands/: mod.rs  text_commands.rs
wix/: main.wxs
