[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"
authors = ["Mason Fisher <masonfisherb@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
config = "0.13.3"
eventlog = "0.2.2"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serenity = "0.11.5"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
win_boiler = { version = "0.1.0", path = "../win_boiler" }
win_boiler_attr = { version = "0.1.0", path = "../win_boiler/win_boiler_attr" }
windows-service = "0.5.0"
